--- a/gb/20/9/2/n12375272.md
+++ b/gb/20/9/2/n12375272.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aecaqq377/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aecaqq377/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aecaqq377/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aecaqq377/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aecaqq377/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aecaqq377/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aecaqq377/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aecaqq377/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aecaqq377/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aecaqq377/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aecaqq377/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aecaqq377/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aecaqq377/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aecaqq377/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aecaqq377/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>修复式司法创三赢 台法务部分享经验盼提升转介率</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/4342300811c9ef3252f5112c298b1b5d-600x400.jpg" />
 <h6>法务部长蔡清祥表示，“修复式司法”的精神是否发挥，攸关社区民众的权益与安全。（法务部提供）
 </h6>
 <hr>
-<p>【大纪元2020年09月02日讯】（大纪元记者袁世钢台湾台北报导）台<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E6%B3%95%E5%8A%A1%E9%83%A8.md#1">法务部</a>自2010年引进“<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E4%BF%AE%E5%A4%8D%E5%BC%8F%E5%8F%B8%E6%B3%95.md#1">修复式司法</a>”，提供<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E5%8A%A0%E5%AE%B3%E4%BA%BA.md#1">加害人</a>与<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E8%A2%AB%E5%AE%B3%E4%BA%BA.md#1">被害人</a>双方一个对话的机会，让<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E5%8A%A0%E5%AE%B3%E4%BA%BA.md#1">加害人</a>得以了解被害人的痛苦，也让被害人能得知更多真相；10年来转介1,969件，有93%的加害人同意“会全力避免此类事件再次发生”。法务部并于北、中、南举办经验分享会，以期提升转介量。</p>
-<p>据<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E6%B3%95%E5%8A%A1%E9%83%A8.md#1">法务部</a>统计，截至今（2020）年7月底，“<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E4%BF%AE%E5%A4%8D%E5%BC%8F%E5%8F%B8%E6%B3%95.md#1">修复式司法</a>”10年来共收案2,251件、开案1,969件，转介成功率达87.47％。而透过问卷调查发现，有93％的加害人同意“会全力避免此类事件再次发生”，可见对于再犯预防具有一定预期成效。</p>
-<p>法务部也指出，结案并已达成协议后，有83％的人认为“协议履行结果与期望一致”，显示修复结果多能满足两造双方的期待；也有75％的<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E8%A2%AB%E5%AE%B3%E4%BA%BA.md#1">被害人</a>“感觉正义已经实现”，显见修复式司法能达到“在复原中实现正义”的正面意义。同时，也赋予了“司法”新意涵，并让更多被害人感受到司法体系的温度与实现正义。</p>
-<p>对此，法务部长<ahref="https://github.com/aecaqq377/djy/blob/master/gb/tag/%E8%94%A1%E6%B8%85%E7%A5%A5.md#1">蔡清祥</a>表示，“修复式司法”的精神是否发挥，攸关社区民众的权益与安全。因此，为圆满诉讼中当事人的复原之路，有赖司法、社政、警政、教育等专业人员的陪伴与支持，要实践“以被害人为中心的保护、以加害人为处遇的预防，以家庭生态系统为支持”的精神，才能让当事人及其家属达到关系修复，走出阴霾，活出色彩。</p>
+<p>【大纪元2020年09月02日讯】（大纪元记者袁世钢台湾台北报导）台<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E5%8A%A1%E9%83%A8.md#1">法务部</a>自2010年引进“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BF%AE%E5%A4%8D%E5%BC%8F%E5%8F%B8%E6%B3%95.md#1">修复式司法</a>”，提供<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8A%A0%E5%AE%B3%E4%BA%BA.md#1">加害人</a>与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A2%AB%E5%AE%B3%E4%BA%BA.md#1">被害人</a>双方一个对话的机会，让<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8A%A0%E5%AE%B3%E4%BA%BA.md#1">加害人</a>得以了解被害人的痛苦，也让被害人能得知更多真相；10年来转介1,969件，有93%的加害人同意“会全力避免此类事件再次发生”。法务部并于北、中、南举办经验分享会，以期提升转介量。</p>
+<p>据<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E5%8A%A1%E9%83%A8.md#1">法务部</a>统计，截至今（2020）年7月底，“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BF%AE%E5%A4%8D%E5%BC%8F%E5%8F%B8%E6%B3%95.md#1">修复式司法</a>”10年来共收案2,251件、开案1,969件，转介成功率达87.47％。而透过问卷调查发现，有93％的加害人同意“会全力避免此类事件再次发生”，可见对于再犯预防具有一定预期成效。</p>
+<p>法务部也指出，结案并已达成协议后，有83％的人认为“协议履行结果与期望一致”，显示修复结果多能满足两造双方的期待；也有75％的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A2%AB%E5%AE%B3%E4%BA%BA.md#1">被害人</a>“感觉正义已经实现”，显见修复式司法能达到“在复原中实现正义”的正面意义。同时，也赋予了“司法”新意涵，并让更多被害人感受到司法体系的温度与实现正义。</p>
+<p>对此，法务部长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%94%A1%E6%B8%85%E7%A5%A5.md#1">蔡清祥</a>表示，“修复式司法”的精神是否发挥，攸关社区民众的权益与安全。因此，为圆满诉讼中当事人的复原之路，有赖司法、社政、警政、教育等专业人员的陪伴与支持，要实践“以被害人为中心的保护、以加害人为处遇的预防，以家庭生态系统为支持”的精神，才能让当事人及其家属达到关系修复，走出阴霾，活出色彩。</p>
 <p>而为了提高案件转介数并扩展案件类型，法务部邀请开案数量较多的新北、台中、彰化及台南等4个地检署，针对“提高转介意愿”、“扩展案件类型”、“提高工作效率”、“建立完善团队”等4大面向，分别在1日、9日及16日于法务部、桥头地检署及台中地检署办理经验分享发表会，盼能营造被害人、加害人及司法三赢的局面。</p>
 <p>修复式司法（Restorative Justice，或译修复式正义）有别于传统刑事司法制度，是另一种在犯罪发生后帮助被害人疗愈创伤、恢复平衡、复原破裂关系的机制，只要双方同意，加害人可在庭外透过促进者主持，亲自跟被害人道歉，展示真诚悔改之意；而被害人则可借此质问加害人犯罪原因，寻求更多真相。◇</p>
 <p>责任编辑：玉珍</p>
@@ -18,47 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12375320.md#1">放宽美猪美牛进口 蔡英文：没有“交换说”</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12375270.md#1">台海陆操舟2死1重伤 桥检：查无人为疏失</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12375265.md#1">警署“安珀警报”形同虚设 民团吁放宽启动要件</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12375281.md#1">路口执法首日违规破万 台警署：加强“行人路权”观念</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12375285.md#1">性侵前科10年刑交保再拐少女 检方声押将发监</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12375080.md#1">捷克访团第3度采检结果出来了 89人均阴性</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12375139.md#1">川普若连任 学者：两岸关系将非常乐观</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12374982.md#1">台新版护照保留国徽 台湾基进：无法接受</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12374869.md#1">台湾增1例境外移入个案 在台居检14天后确诊</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616470.md#1">台海情势受关注 蔡英文：民主是唯一选项</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616369.md#1">台湾边境渐松绑 旅游业者已接包团订单</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616367.md#1">庇护乌克兰难民 徐国勇：以不推回原则处理</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616284.md#1">狱中指挥议员女儿诈助理费 高雄前议员重判10年5月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616286.md#1">越南女移工成整形密医 私设医美诊所1年赚300万</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616290.md#1">首梯新制教召5日登场 每日施训10小时两周无休</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616184.md#1">会拜登特使团 赖清德盼台湾能加入Quad</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616189.md#1">台美教育高层对话 美亚太助卿与国安会与谈</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615635.md#1">接见美代表团 蔡英文：冷眼姑息侵略将制造更多威胁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616028.md#1">拜登派访团来台 苏贞昌：让极权独裁武力侵略者不敢妄动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/aecaqq377/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437477.md#1" target="_blank">世纪正邪之战 美国总统及各级政要支持法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/19/n11123506.md#1" target="_blank">林辉：朱德曾被德国驱逐 效力中共晚景凄凉</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/15/n3871061.md#1" target="_blank">唐恩：推崇真善忍　褒奖显人心</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/31/n12368878.md#1">妈妈昏倒 5岁儿打“玩具救护车”上号码救母</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/10/n12318960.md#1">【命理】什么时候能找到男朋友？</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12374025.md#1">【珍言真语】梁家杰：港人不与中共暴政和解</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/1/n12373628.md#1">【薇羽看世间】告诉你一个真实的蓬佩奥</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/1/n12373348.md#1">【时事纵横】内蒙数万人抗议 美解密对台六保证</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/30/n12368732.md#1">美国大选 川普民调领先 拜登犯错失民心</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/25/n12356888.md#1">【欺世大观】汉奸毛泽东：秘密结盟 卖国求生</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/31/n12368816.md#1">【一线采访视频版】历史教授揭大饥荒真相 被停退休金</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/30/n12368618.md#1">当妈后首晒女儿动态 唐嫣配文：宝贝的宝贝</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/30/n12368200.md#1">移民进度？黄秋生宣布搬离住香港20年旧居</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/1/n12373697.md#1">二亿元飞机半价也卖不出 赵本山遭女儿吐槽</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/31/n12371304.md#1">7天内2起官司 范冰冰借工作室感叹人情冷暖</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/31/n12369774.md#1">140公斤日本网红年减体重一半 胖男变帅哥</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/31/n12369533.md#1">美国海军最小船舰迷你可爱 不到6米长</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/31/n12369774.md#1">140公斤日本网红年减体重一半 胖男变帅哥</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/31/n12369943.md#1">短片：俄Su-27战机危险拦截美B-52轰炸机</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/9/1/n12372441.md#1">俄公布“沙皇炸弹”测试画面 史上最强核爆</a></li>
-<li><a href="https://github.com/aecaqq377/djy/blob/master/gb/20/8/30/n12367993.md#1">加拿大渔民捕获罕见长鼻银鲛 背鳍有毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aecaqq377/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aecaqq377/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/2/n12375272.htm">修复式司法创三赢 台法务部分享经验盼提升转介率</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/2/n12375272.htm">修复式司法创三赢 台法务部分享经验盼提升转介率</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/aecaqq377/djy/blob/master/gb/20/9/2/n12375272.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aecaqq377/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aecaqq377/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aecaqq377/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aecaqq377/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aecaqq377/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/2/n12375272.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
